--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-dev": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-preset-airbnb": "^2.4.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -31,6 +33,9 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "style-loader": "^0.20.3",
-    "webpack": "^4.4.1"
+    "webpack": "^3.11.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^7.1.4"
   }
 }
