--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-dev": "webpack --watch"
+    "build-dev": "webpack --watch",
+    "start-dev": "nodemon src/server/index.js"
   },
   "repository": {
     "type": "git",
@@ -30,12 +31,14 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
+    "mongoose": "^5.0.12",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "style-loader": "^0.20.3",
     "webpack": "^3.11.0"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.4"
+    "babel-loader": "^7.1.4",
+    "nodemon": "^1.17.3"
   }
 }
