--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
+    "moment": "^2.22.0",
     "mongoose": "^5.0.12",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
