--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "material-ui": "^1.0.0-beta.39",
     "moment": "^2.22.0",
     "mongoose": "^5.0.12",
     "react": "^16.3.0",
