--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.10.0",
@@ -35,6 +36,7 @@
     "material-ui": "^1.0.0-beta.39",
     "moment": "^2.22.0",
     "mongoose": "^5.0.12",
+    "nodemailer": "^4.6.4",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "style-loader": "^0.20.3",
