Decided to only allow for reminders with the next hour

--- a/package.json
+++ b/package.json
@@ -33,12 +33,17 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "input-moment": "^0.4.0",
     "material-ui": "^1.0.0-beta.39",
     "moment": "^2.22.0",
     "mongoose": "^5.0.12",
     "nodemailer": "^4.6.4",
+    "rc-time-picker": "^3.3.1",
     "react": "^16.3.0",
+    "react-datepicker": "^1.4.0",
     "react-dom": "^16.3.0",
+    "react-time-picker": "^2.4.0",
+    "semantic-ui-react": "^0.79.0",
     "style-loader": "^0.20.3",
     "webpack": "^3.11.0"
   },
